_Internal/Mongo/breeze-mongodb/odataParser.js
module.exports = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "wsp": parse_wsp,
        "hexdigit": parse_hexdigit,
        "hexdigit2": parse_hexdigit2,
        "hexdigit4": parse_hexdigit4,
        "hexdigit8": parse_hexdigit8,
        "squote": parse_squote,
        "unescChar": parse_unescChar,
        "escString": parse_escString,
        "digit": parse_digit,
        "digit19": parse_digit19,
        "digits": parse_digits,
        "frac": parse_frac,
        "e": parse_e,
        "exp": parse_exp,
        "int": parse_int,
        "number": parse_number,
        "year": parse_year,
        "month": parse_month,
        "day": parse_day,
        "minute": parse_minute,
        "nanoSeconds": parse_nanoSeconds,
        "timeZone": parse_timeZone,
        "sign": parse_sign,
        "nan": parse_nan,
        "negativeInfinity": parse_negativeInfinity,
        "positiveInfinity": parse_positiveInfinity,
        "nanInfinity": parse_nanInfinity,
        "unreserved": parse_unreserved,
        "dateTime": parse_dateTime,
        "dateTimeOffset": parse_dateTimeOffset,
        "identifierPart": parse_identifierPart,
        "identifier": parse_identifier,
        "nullLiteral": parse_nullLiteral,
        "binaryLiteral": parse_binaryLiteral,
        "booleanLiteral": parse_booleanLiteral,
        "dateTimeLiteral": parse_dateTimeLiteral,
        "dateTimeOffsetLiteral": parse_dateTimeOffsetLiteral,
        "numericLiteral": parse_numericLiteral,
        "guidLiteral": parse_guidLiteral,
        "stringLiteral": parse_stringLiteral,
        "literal": parse_literal,
        "top": parse_top,
        "expand": parse_expand,
        "expandExpr": parse_expandExpr,
        "skip": parse_skip,
        "format": parse_format,
        "inlinecount": parse_inlinecount,
        "orderby": parse_orderby,
        "orderbyExpr": parse_orderbyExpr,
        "orderbyPath": parse_orderbyPath,
        "select": parse_select,
        "selectExpr": parse_selectExpr,
        "identifierPath": parse_identifierPath,
        "filter": parse_filter,
        "filterExpr": parse_filterExpr,
        "n0Expr": parse_n0Expr,
        "n1Expr": parse_n1Expr,
        "n2Expr": parse_n2Expr,
        "anyAllExpr": parse_anyAllExpr,
        "andOrExpr": parse_andOrExpr,
        "boolExpr": parse_boolExpr,
        "mathExpr": parse_mathExpr,
        "memberExpr": parse_memberExpr,
        "parenExpr": parse_parenExpr,
        "unaryExprOp": parse_unaryExprOp,
        "unaryExpr": parse_unaryExpr,
        "boolOp": parse_boolOp,
        "mathOp": parse_mathOp,
        "andOrOp": parse_andOrOp,
        "anyAllOp": parse_anyAllOp,
        "methodCallExpr": parse_methodCallExpr,
        "replaceMethodCallExpr": parse_replaceMethodCallExpr,
        "substring3MethodCallExpr": parse_substring3MethodCallExpr,
        "substring2MethodCallExpr": parse_substring2MethodCallExpr,
        "toLowerMethodCallExpr": parse_toLowerMethodCallExpr,
        "toUpperMethodCallExpr": parse_toUpperMethodCallExpr,
        "trimMethodCallExpr": parse_trimMethodCallExpr,
        "concatMethodCallExpr": parse_concatMethodCallExpr,
        "lengthMethodCallExpr": parse_lengthMethodCallExpr,
        "indexOfMethodCallExpr": parse_indexOfMethodCallExpr,
        "substringOfMethodCallExpr": parse_substringOfMethodCallExpr,
        "startsWithMethodCallExpr": parse_startsWithMethodCallExpr,
        "endsWithMethodCallExpr": parse_endsWithMethodCallExpr,
        "secondMethodCallExpr": parse_secondMethodCallExpr,
        "minuteMethodCallExpr": parse_minuteMethodCallExpr,
        "hourMethodCallExpr": parse_hourMethodCallExpr,
        "dayMethodCallExpr": parse_dayMethodCallExpr,
        "monthMethodCallExpr": parse_monthMethodCallExpr,
        "yearMethodCallExpr": parse_yearMethodCallExpr,
        "roundMethodCallExpr": parse_roundMethodCallExpr,
        "ceilingMethodCallExpr": parse_ceilingMethodCallExpr,
        "floorMethodCallExpr": parse_floorMethodCallExpr,
        "isOf1MethodCallExpr": parse_isOf1MethodCallExpr,
        "isOf2MethodCallExpr": parse_isOf2MethodCallExpr,
        "args1": parse_args1,
        "args2": parse_args2,
        "args3": parse_args3,
        "unsupported": parse_unsupported,
        "expList": parse_expList,
        "exp": parse_exp,
        "query": parse_query
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "query";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_wsp() {
        var result0;
        
        if (input.charCodeAt(pos) === 32) {
          result0 = " ";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\" \"");
          }
        }
        return result0;
      }
      
      function parse_hexdigit() {
        var result0;
        
        if (/^[0-9a-fA-F]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[0-9a-fA-F]");
          }
        }
        return result0;
      }
      
      function parse_hexdigit2() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = parse_hexdigit();
        if (result0 !== null) {
          result1 = parse_hexdigit();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_hexdigit4() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = parse_hexdigit2();
        if (result0 !== null) {
          result1 = parse_hexdigit2();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_hexdigit8() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = parse_hexdigit4();
        if (result0 !== null) {
          result1 = parse_hexdigit4();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_squote() {
        var result0;
        
        if (input.substr(pos, 4) === "%x27") {
          result0 = "%x27";
          pos += 4;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"%x27\"");
          }
        }
        if (result0 === null) {
          if (input.charCodeAt(pos) === 39) {
            result0 = "'";
            pos++;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"'\"");
            }
          }
        }
        return result0;
      }
      
      function parse_unescChar() {
        var result0;
        var pos0;
        
        pos0 = pos;
        if (input.substr(pos, 2) === "''") {
          result0 = "''";
          pos += 2;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"''\"");
          }
        }
        if (result0 !== null) {
          result0 = (function(offset) { return "'" })(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_escString() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = [];
        result1 = parse_unescChar();
        if (result1 === null) {
          if (/^[^']/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[^']");
            }
          }
        }
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_unescChar();
          if (result1 === null) {
            if (/^[^']/.test(input.charAt(pos))) {
              result1 = input.charAt(pos);
              pos++;
            } else {
              result1 = null;
              if (reportFailures === 0) {
                matchFailed("[^']");
              }
            }
          }
        }
        if (result0 !== null) {
          result0 = (function(offset, v) { return v.join(""); })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_digit() {
        var result0;
        
        if (/^[0-9]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[0-9]");
          }
        }
        return result0;
      }
      
      function parse_digit19() {
        var result0;
        
        if (/^[1-9]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[1-9]");
          }
        }
        return result0;
      }
      
      function parse_digits() {
        var result0, result1;
        
        result1 = parse_digit();
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_digit();
          }
        } else {
          result0 = null;
        }
        return result0;
      }
      
      function parse_frac() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        if (input.charCodeAt(pos) === 46) {
          result0 = ".";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\".\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_digits();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_e() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        if (/^[eE]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[eE]");
          }
        }
        if (result0 !== null) {
          if (/^[+\-]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[+\\-]");
            }
          }
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_exp() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = parse_e();
        if (result0 !== null) {
          result1 = parse_digits();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_int() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = pos;
        result0 = parse_digit19();
        if (result0 !== null) {
          result1 = parse_digits();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        if (result0 === null) {
          result0 = parse_digit();
          if (result0 === null) {
            pos0 = pos;
            if (input.charCodeAt(pos) === 45) {
              result0 = "-";
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"-\"");
              }
            }
            if (result0 !== null) {
              result1 = parse_digit19();
              if (result1 !== null) {
                result2 = parse_digits();
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos0;
                }
              } else {
                result0 = null;
                pos = pos0;
              }
            } else {
              result0 = null;
              pos = pos0;
            }
            if (result0 === null) {
              pos0 = pos;
              if (input.charCodeAt(pos) === 45) {
                result0 = "-";
                pos++;
              } else {
                result0 = null;
                if (reportFailures === 0) {
                  matchFailed("\"-\"");
                }
              }
              if (result0 !== null) {
                result1 = parse_digit();
                if (result1 !== null) {
                  result0 = [result0, result1];
                } else {
                  result0 = null;
                  pos = pos0;
                }
              } else {
                result0 = null;
                pos = pos0;
              }
            }
          }
        }
        return result0;
      }
      
      function parse_number() {
        var result0, result1, result2;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        pos2 = pos;
        result0 = parse_int();
        if (result0 !== null) {
          result1 = parse_frac();
          if (result1 !== null) {
            result2 = parse_exp();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos2;
            }
          } else {
            result0 = null;
            pos = pos2;
          }
        } else {
          result0 = null;
          pos = pos2;
        }
        if (result0 !== null) {
          if (/^[mMfL]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[mMfL]");
            }
          }
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, parts) { return parseFloat2(parts); })(pos0, result0[0]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          pos1 = pos;
          pos2 = pos;
          result0 = parse_int();
          if (result0 !== null) {
            result1 = parse_frac();
            if (result1 !== null) {
              result0 = [result0, result1];
            } else {
              result0 = null;
              pos = pos2;
            }
          } else {
            result0 = null;
            pos = pos2;
          }
          if (result0 !== null) {
            if (/^[mMfL]/.test(input.charAt(pos))) {
              result1 = input.charAt(pos);
              pos++;
            } else {
              result1 = null;
              if (reportFailures === 0) {
                matchFailed("[mMfL]");
              }
            }
            result1 = result1 !== null ? result1 : "";
            if (result1 !== null) {
              result0 = [result0, result1];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
          if (result0 !== null) {
            result0 = (function(offset, parts) { return parseFloat2(parts); })(pos0, result0[0]);
          }
          if (result0 === null) {
            pos = pos0;
          }
          if (result0 === null) {
            pos0 = pos;
            pos1 = pos;
            pos2 = pos;
            result0 = parse_int();
            if (result0 !== null) {
              result1 = parse_exp();
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos2;
              }
            } else {
              result0 = null;
              pos = pos2;
            }
            if (result0 !== null) {
              if (/^[mMfL]/.test(input.charAt(pos))) {
                result1 = input.charAt(pos);
                pos++;
              } else {
                result1 = null;
                if (reportFailures === 0) {
                  matchFailed("[mMfL]");
                }
              }
              result1 = result1 !== null ? result1 : "";
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, parts) { return parseFloat2(parts); })(pos0, result0[0]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            if (result0 === null) {
              pos0 = pos;
              pos1 = pos;
              result0 = parse_int();
              if (result0 !== null) {
                if (/^[mMfL]/.test(input.charAt(pos))) {
                  result1 = input.charAt(pos);
                  pos++;
                } else {
                  result1 = null;
                  if (reportFailures === 0) {
                    matchFailed("[mMfL]");
                  }
                }
                result1 = result1 !== null ? result1 : "";
                if (result1 !== null) {
                  result0 = [result0, result1];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
              if (result0 !== null) {
                result0 = (function(offset, parts) { return parseFloat2(parts); })(pos0, result0[0]);
              }
              if (result0 === null) {
                pos = pos0;
              }
            }
          }
        }
        return result0;
      }
      
      function parse_year() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_digit();
        if (result0 !== null) {
          result1 = parse_digit();
          if (result1 !== null) {
            result2 = parse_digit();
            if (result2 !== null) {
              result3 = parse_digit();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, a, b, c, d) { return a + b + c + d; })(pos0, result0[0], result0[1], result0[2], result0[3]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_month() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        if (/^[0-1]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[0-1]");
          }
        }
        if (result0 !== null) {
          result1 = parse_digit();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          if (input.charCodeAt(pos) === 50) {
            result0 = "2";
            pos++;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"2\"");
            }
          }
          if (result0 !== null) {
            if (/^[0-4]/.test(input.charAt(pos))) {
              result1 = input.charAt(pos);
              pos++;
            } else {
              result1 = null;
              if (reportFailures === 0) {
                matchFailed("[0-4]");
              }
            }
            if (result1 !== null) {
              result0 = [result0, result1];
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        }
        return result0;
      }
      
      function parse_day() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        if (/^[0-2]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[0-2]");
          }
        }
        if (result0 !== null) {
          result1 = parse_digit();
